# RAN4Creativity

./: .gitignore  CHECKPOINTING.md  README.md  __init__.py  config.py  evaluate.py  experiment.py  prompts.py  pyproject.toml
core/outputs/: groq_judgments.jsonl  groq_judgments_summary.json
outputs/: all_results.json
