[project]
name = "ran4creativity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "google-genai>=1.57.0",
    "groq>=1.0.0",
    "openai>=2.14.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
